tests/testcases/invalid/semantic/20_do_while_condition_not_bool.ciel
// Error: do-while condition must be of type 'bool'
int main() {
    int x = 5;
    do {
        x = x - 1;
    } while (x);  // Error: x is int, not bool
    return 0;
}
